music1/music.yml
apiVersion: v1
kind: Service
metadata:
  name: music-service
  namespace: music1
  labels:
    app: web
    tier: frontend
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: web
  selector:
    app: web
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: music1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web
        tier: frontend
    spec:
      containers:
      - name: web
        image: datianshi/spring-music
