music1/nsx-t.yml
apiVersion: v1
kind: Service
metadata:
  name: nsx-lb
  namespace: music1
  labels:
    name: nsx-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: web
  selector:
    app: web
    tier: frontend
