music1/ingress-aws.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: music-ingress
  namespace: music1
  annotations: {}
spec:
  rules:
  - host: music1.aws.shaozhenpcf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: music-service
          servicePort: 8080
