music1/ingress-istio.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: music-ingress
  namespace: music1
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: music1.nsx-t.shaozhenpcf.com
    http:
      paths:
      - path: /.*
        backend:
          serviceName: music-service
          servicePort: 8080
