music1/ingress-nsxt.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: music-ingress
  namespace: music1
spec:
  tls:
  - hosts:
    - music1.nsx-t.shaozhenpcf.com
    secretName: cafe-secret
  rules:
  - host: music1.nsx-t.shaozhenpcf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: music-service
          servicePort: 8080
